--- a/css/style.css
+++ b/css/style.css
@@ -1077,6 +1077,7 @@ h3.about{
   }
   .section-title-sub{
     font-size: 40px;
+    font-weight: 700;
   }
   .bg-img{
     background-image: url(../img/bg-hero-iphone.jpg);
@@ -1339,6 +1340,6 @@ ul.timeline > li:before {
 /* small Mobile :320px. */
 @media only screen and (max-width: 479px) {
   .section-title {
-    font-size: 30px;
+    font-size: 24px;
   }
 }
